--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.24.4",
+    "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-sass": "^5.24.0",
     "gatsby-plugin-styled-components": "^5.24.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6"
   }
