--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-sass": "^5.24.0",
     "gatsby-plugin-styled-components": "^5.24.0",
+    "google-map-react": "^2.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
