--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-parallax": "^3.5.1",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.4"
