--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-sass": "^5.24.0",
     "gatsby-plugin-styled-components": "^5.24.0",
-    "google-map-react": "^2.2.0",
+    "leaflet": "^1.9.2",
+    "mapkick": "^0.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-leaflet": "^4.1.0",
     "react-parallax": "^3.5.1",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
