--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@loadable/component": "^5.15.2",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.24.4",
     "gatsby-omni-font-loader": "^2.0.2",
@@ -24,6 +25,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-lazily": "^0.9.1",
     "react-leaflet": "^4.1.0",
     "react-parallax": "^3.5.1",
     "sass": "^1.55.0",
