--- a/package.json
+++ b/package.json
@@ -21,13 +21,12 @@
     "gatsby-plugin-sass": "^5.24.0",
     "gatsby-plugin-styled-components": "^5.24.0",
     "leaflet": "^1.9.2",
-    "mapkick": "^0.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
-    "react-lazily": "^0.9.1",
     "react-leaflet": "^4.1.0",
     "react-parallax": "^3.5.1",
+    "react-scroll": "^1.8.8",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.4"
