--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^9.4.1",
     "react-leaflet": "^4.1.0",
     "react-parallax": "^3.5.1",
     "react-scroll": "^1.8.8",
+    "react-tracked": "^1.7.10",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.4"
