--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "leaflet": "^1.9.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-drag-drop-container": "^6.1.1",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.4.1",
     "react-leaflet": "^4.1.0",
     "react-parallax": "^3.5.1",
     "react-scroll": "^1.8.8",
+    "react-spring": "^9.6.1",
     "react-tracked": "^1.7.10",
+    "react-use-gesture": "^9.1.3",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.4"
