--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@loadable/component": "^5.15.2",
     "babel-plugin-styled-components": "^2.0.7",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "gatsby": "^4.24.4",
     "gatsby-omni-font-loader": "^2.0.2",
