--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@loadable/component": "^5.15.2",
+    "axios": "^1.2.2",
     "babel-plugin-styled-components": "^2.0.7",
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
