--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.4.1",
     "react-leaflet": "^4.1.0",
+    "react-loaders-kit": "^0.1.3",
     "react-parallax": "^3.5.1",
     "react-scroll": "^1.8.8",
     "react-toastify": "^9.1.1",
