--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.18.6",
     "@hookform/resolvers": "^2.9.10",
     "@loadable/component": "^5.15.2",
     "axios": "^1.2.2",
