--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
+    "react-favicon": "^2.0.3",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.4.1",
     "react-leaflet": "^4.1.0",
