updating npm packages

--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@hookform/resolvers": "^2.9.10",
     "@loadable/component": "^5.15.2",
     "axios": "^1.2.2",
-    "babel-plugin-styled-components": "^2.0.7",
+    "babel-plugin-styled-components": "^2.1.4",
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
-    "gatsby": "^4.24.4",
-    "gatsby-plugin-sass": "^5.24.0",
-    "gatsby-plugin-styled-components": "^5.24.0",
+    "gatsby": "^5.12.9",
+    "gatsby-plugin-sass": "^6.12.3",
+    "gatsby-plugin-styled-components": "^6.12.0",
+    "gatsby-source-strapi": "^3.3.1",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
@@ -38,7 +39,7 @@
     "react-tooltip": "^5.11.1",
     "react-tracked": "^1.7.10",
     "sass": "^1.55.0",
-    "styled-components": "^5.3.6",
+    "styled-components": "^6.1.0",
     "swiper": "^8.4.4",
     "yup": "^0.32.8"
   }
