font package strapi source

--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "gatsby": "^5.12.9",
+    "gatsby-plugin-image": "^3.12.3",
     "gatsby-plugin-sass": "^6.12.3",
+    "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-source-strapi": "^3.3.1",
+    "gatsby-transformer-sharp": "^5.12.3",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
@@ -39,6 +42,7 @@
     "react-tooltip": "^5.11.1",
     "react-tracked": "^1.7.10",
     "sass": "^1.55.0",
+    "styled-component": "^2.8.0",
     "styled-components": "^6.1.0",
     "swiper": "^8.4.4",
     "yup": "^0.32.8"
