--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-loaders-kit": "^0.1.3",
     "react-parallax": "^3.5.1",
     "react-scroll": "^1.8.8",
+    "react-scroll-parallax": "^3.4.3",
     "react-toastify": "^9.1.1",
     "react-tooltip": "^5.11.1",
     "react-tracked": "^1.7.10",
