--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.2.9",
     "gatsby": "^5.12.9",
     "gatsby-plugin-image": "^3.12.3",
+    "gatsby-plugin-preload-fonts": "^4.12.1",
     "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-source-strapi": "^3.3.1",
